<resources>
    <string name="app_name">Ai La Ty Phu</string>
    <string name="million_85">85,000,000</string>
    <string name="million_150">150,000,000</string>
    <string name="million_60">60,000,000</string>
    <string name="million_40">40,000,000</string>
    <string name="million_30">30,000,000</string>
    <string name="million_22">22,000,000</string>
    <string name="million_14">14,000,000</string>
    <string name="million_10">10,000,000</string>
    <string name="million_6">6,000,000</string>
    <string name="million_3">3,000,000</string>
    <string name="million_2">2,000,000</string>
    <string name="million_1">1,000,000</string>
    <string name="hundred_thousand_6">600,000</string>
    <string name="hundred_thousand_4">400,000</string>
    <string name="hundred_thousand_2">200,000</string>
    <string name="message_ready">Thông báo</string>
    <string name="content_message">Bạn đã sẵn sàng chơi với chúng tôi ?</string>
    <string name="zero">0</string>
    <string name="out_time">Hết giờ!</string>
    <string name="stop_message">Bạn có muốn dừng cuộc chơi?</string>
    <string name="help_call_answer_a">Theo tôi đáp án đúng là A</string>
    <string name="help_call_answer_b">Theo tôi đáp án đúng là B</string>
    <string name="help_call_answer_c">Theo tôi đáp án đúng là C</string>
    <string name="help_call_answer_d">Theo tôi đáp án đúng là D</string>
    <string name="zero_vnd">0 VND</string>
    <string name="millon_85_score">85,000,000 VND</string>
    <string name="millon_60_score">60,000,000 VND</string>
    <string name="millon_40_score">40,000,000 VND</string>
    <string name="millon_30_score">30,000,000 VND</string>
    <string name="millon_22_score">22,000,000 VND</string>
    <string name="millon_14_score">14,000,000 VND</string>
    <string name="millon_10_score">10,000,000 VND</string>
    <string name="millon_6_score">6,000,000 VND</string>
    <string name="millon_3_score">3,000,000 VND</string>
    <string name="millon_2_score">2,000,000 VND</string>
    <string name="hundred_thousand_2_score">200,000 VND</string>
    <string name="millon_150_score">150,000,000 VND</string>
    <string name="infor">Version: 1.0.0\nDesign: Phan Son\nEmail: Phanson10071997@gmail.com</string>
</resources>